--- a/index.html
+++ b/index.html
@@ -98,10 +98,11 @@
             </div>
             
             <div class="hero-image">
-                <img src="assets/img/Dr. Arvind-Srivastava-Header.png" alt="Dr. Arvind Kumar Srivastava">
+                <img src="assets/img/Dr. Srivastav Image.png" alt="Dr. Arvind Kumar Srivastava">
             </div>
         </div>
     </section>
+
 
     <!-- Statistics Section -->
     <section class="stats-section">
