--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Dr. Arvind Kumar Srivastava - Neurosurgeon | New Delhi</title>
     <meta name="title" content="Dr. Arvind Kumar Srivastava - Neurosurgeon | New Delhi">
     <meta name="description" content="Dr. Arvind Kumar Srivastava - Director-Professor & Consultant Neurosurgeon with 40+ years experience. Specializing in functional neurosurgery, neuro-oncology, skull base surgery, and cerebrovascular surgery at G.B. Pant Institute, New Delhi.">
-    <meta name="keywords" content="Dr Arvind Kumar Srivastava, neurosurgeon Delhi, brain surgery Delhi, G.B. Pant Hospital, neurosurgery specialist, skull base surgery, neuro-oncology, cerebrovascular surgery, functional neurosurgery, best neurosurgeon New Delhi">
+    <meta name="keywords" content="Dr Arvind Kumar Srivastava, neurosurgeon Delhi, brain surgery Delhi, Ex G.B. Pant Hospital, neurosurgery specialist, skull base surgery, neuro-oncology, cerebrovascular surgery, functional neurosurgery, best neurosurgeon New Delhi">
     <meta name="author" content="Dr. Arvind Kumar Srivastava">
     <meta name="robots" content="index, follow">
     <meta name="language" content="English">
@@ -299,6 +299,7 @@
                        class="contact-link">
                         <p>51/13, Old Rajinder Nagar, Rajinder Nagar, New Delhi</p>
                         <!-- <p>G.B. Pant Institute, New Delhi - 110002</p> -->
+    
                     </a>
                     
                     <div class="contact-social-media">
