--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                     <div class="service-icon">
                         <i class="fas fa-ambulance"></i>
                     </div>
-                    <h3>Emergency Neurosurgery</h3>
-                    <p>24/7 emergency care for traumatic brain and spinal injuries.</p>
+                    <h3>Emergency Care</h3>
+                    <p>24/7 Emergency Care for traumatic brain and spinal injuries.</p>
                 </div>
             </div>
         </div>
